# PAOO

./: CMakeLists.txt  README.md
include/: LogFile.hpp  Logger.hpp
logs/: errors.log_copy
src/: LogFile.cpp  Logger.cpp  main.cpp
